Refine About Me section

--- a/index.html
+++ b/index.html
@@ -8,21 +8,30 @@
 <body>
   <header>
     <h1>Welcome to riohayes.github.io</h1>
+    <p>このサイトは riohayes の GitHub Pages ユーザサイトです。</p>
   </header>
 
   <main>
-    <section>
-      <h2>About</h2>
+    <section id="about">
+      <h2>About Me</h2>
+
+      <h3>HIROSE Ryota</h3>
       <p>
-        こんにちは。これは私，riohayes の GitHub Pages ユーザサイトです。  
-        現在はスタイルなしのシンプルなHTMLページとして作成しています。
+        看護学専攻の学生です。精神看護に興味があります。<br />
+        情報科学と看護学を組み合わせて，新たな発見や課題解決をしたいと考えています。
       </p>
+
+      <h3>経歴</h3>
+      <ul>
+        <li>金沢大学大学院 自然科学研究科 電子情報科学専攻 博士前期課程 修了</li>
+        <li>金沢大学 医薬保健学域 保健学類 看護学専攻 在学中</li>
+      </ul>
     </section>
 
-    <section>
+    <section id="links">
       <h2>Links</h2>
       <ul>
-        <li><a href="https://github.com/riohayes">GitHub Profile</a></li>
+        <li><a href="https://github.com/riohayes" target="_blank">GitHub Profile</a></li>
       </ul>
     </section>
   </main>
