--- a/index.html
+++ b/index.html
@@ -4,40 +4,49 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>riohayes.github.io</title>
+  
+  <!-- Bootstrap CSS CDN -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
-<body>
-  <header>
-    <h1>Welcome to riohayes.github.io</h1>
-    <p>このサイトは riohayes の GitHub Pages ユーザサイトです。</p>
+<body class="bg-light text-dark">
+
+  <header class="bg-pink text-white text-center py-5 mb-5" style="background-color: #e56a8f;">
+    <h1 class="display-4">Welcome to riohayes.github.io</h1>
+    <p class="lead">このサイトは riohayes の GitHub Pages ユーザサイトです。</p>
   </header>
 
-  <main>
-    <section id="about">
-      <h2>About Me</h2>
+  <main class="container">
+    <section id="about" class="mb-5">
+      <h2 class="mb-4 text-pink" style="color: #e75480;">About Me</h2>
 
-      <h3>HIROSE Ryota</h3>
-      <p>
-        看護学専攻の学生です。精神看護に興味があります。<br />
-        情報科学と看護学を組み合わせて，新たな発見や課題解決をしたいと考えています。
-      </p>
+      <div class="ms-4"> <!-- 階層を少し右にずらす -->
+        <h3 class="h5 mt-3" style="color: #d1477e;">HIROSE Ryota</h3>
+        <p class="mb-3">
+          看護学専攻の学生です。精神看護に興味があります。<br />
+          情報科学と看護学を組み合わせて，新たな発見や課題解決をしたいと考えています。
+        </p>
 
-      <h3>経歴</h3>
-      <ul>
-        <li>金沢大学大学院 自然科学研究科 電子情報科学専攻 博士前期課程 修了</li>
-        <li>金沢大学 医薬保健学域 保健学類 看護学専攻 在学中</li>
-      </ul>
+        <h3 class="h5 mt-4" style="color: #d1477e;">経歴</h3>
+        <ul class="list-group">
+          <li class="list-group-item border-0 p-1" style="background-color: #fde0eb;">金沢大学大学院 自然科学研究科 電子情報科学専攻 博士前期課程 修了</li>
+          <li class="list-group-item border-0 p-1" style="background-color: #fde0eb;">金沢大学 医薬保健学域 保健学類 看護学専攻 在学中</li>
+        </ul>
+      </div>
     </section>
 
     <section id="links">
-      <h2>Links</h2>
-      <ul>
-        <li><a href="https://github.com/riohayes" target="_blank">GitHub Profile</a></li>
+      <h2 class="mb-3 text-pink" style="color: #e75480;">Links</h2>
+      <ul class="list-unstyled">
+        <li><a href="https://github.com/riohayes" target="_blank" class="btn btn-outline-pink" style="border-color: #e75480; color: #e75480;">GitHub Profile</a></li>
       </ul>
     </section>
   </main>
 
-  <footer>
-    <p>&copy; 2025 riohayes</p>
+  <footer class="text-white text-center py-3 mt-5" style="background-color: #f8c3d4;">
+    <p class="mb-0">&copy; 2025 riohayes</p>
   </footer>
+
+  <!-- Bootstrap JS CDN（必要なら） -->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
