--- a/index.html
+++ b/index.html
@@ -10,22 +10,34 @@
 </head>
 <body class="bg-light text-dark">
 
-  <header class="bg-pink text-white text-center py-5 mb-5" style="background-color: #e56a8f;">
+  <!-- ヘッダー -->
+  <header class="text-white text-center py-5 mb-5" style="background-color: #e56a8f;">
     <h1 class="display-4">Welcome to riohayes.github.io</h1>
     <p class="lead">このサイトは riohayes の GitHub Pages ユーザサイトです。</p>
   </header>
 
   <main class="container">
-    <section id="about" class="mb-5">
-      <h2 class="mb-4 text-pink" style="color: #e75480;">About Me</h2>
 
-      <div class="ms-4"> <!-- 階層を少し右にずらす -->
+    <!-- About Me -->
+    <section id="about" class="mb-5">
+      <h2 class="mb-4" style="color: #e75480;">About Me</h2>
+      <div class="ms-4">
         <h3 class="h5 mt-3" style="color: #d1477e;">HIROSE Ryota</h3>
         <p class="mb-3">
           看護学専攻の学生です。精神看護に興味があります。<br />
           情報科学と看護学を組み合わせて，新たな発見や課題解決をしたいと考えています。
         </p>
 
+        <!-- 所属 -->
+        <h3 class="h5 mt-4" style="color: #d1477e;">所属</h3>
+        <ul class="list-group mb-3">
+          <li class="list-group-item border-0 p-1" style="background-color: #fde0eb;">金沢大学 医薬保健学域 保健学類 看護学専攻</li>
+          <li class="list-group-item border-0 p-1" style="background-color: #fde0eb;">
+            <a href="https://mentalhealth.w3.kanazawa-u.ac.jp/" target="_blank">精神看護学研究室</a>
+          </li>
+        </ul>
+
+        <!-- 経歴 -->
         <h3 class="h5 mt-4" style="color: #d1477e;">経歴</h3>
         <ul class="list-group">
           <li class="list-group-item border-0 p-1" style="background-color: #fde0eb;">金沢大学大学院 自然科学研究科 電子情報科学専攻 博士前期課程 修了</li>
@@ -34,19 +46,43 @@
       </div>
     </section>
 
+    <!-- Activities -->
+    <section id="activities" class="mb-5">
+      <h2 class="mb-4" style="color: #e75480;">Activities</h2>
+      <div class="ms-4">
+        <h3 class="h5 mt-3" style="color: #d1477e;">ボランティア</h3>
+        <ul class="list-group">
+          <li class="list-group-item border-0 p-1" style="background-color: #fde0eb;">
+            輪島市仮設住宅での「健康づくりのひろば」学生ボランティア
+            <br><a href="https://notomirai.w3.kanazawa-u.ac.jp/kud-report/153565/" target="_blank">「健康づくりのひろば」を開催 | 金沢大学 能登里山里海未来創造センター</a>
+          </li>
+          <li class="list-group-item border-0 p-1" style="background-color: #fde0eb;">
+            「日本精神保健看護学会第35回学術集会・総会」学生ボランティア
+            <br><a href="https://nex-tage.com/japmhn35th/images/program/program_book.pdf" target="_blank">日本精神保健看護学会第35回学術集会学会プログラム</a>
+          </li>
+        </ul>
+      </div>
+    </section>
+
+    <!-- Links -->
     <section id="links">
-      <h2 class="mb-3 text-pink" style="color: #e75480;">Links</h2>
+      <h2 class="mb-3" style="color: #e75480;">Links</h2>
       <ul class="list-unstyled">
-        <li><a href="https://github.com/riohayes" target="_blank" class="btn btn-outline-pink" style="border-color: #e75480; color: #e75480;">GitHub Profile</a></li>
+        <li>
+          <a href="https://github.com/riohayes" target="_blank" class="btn btn-outline-dark" 
+             style="border-color: #e75480; color: #e75480;">GitHub Profile</a>
+        </li>
       </ul>
     </section>
+
   </main>
 
-  <footer class="text-white text-center py-3 mt-5" style="background-color: #f8c3d4;">
+  <!-- フッター（ヘッダーと同じ濃いピンク） -->
+  <footer class="text-white text-center py-3 mt-5" style="background-color: #e56a8f;">
     <p class="mb-0">&copy; 2025 riohayes</p>
   </footer>
 
-  <!-- Bootstrap JS CDN（必要なら） -->
+  <!-- Bootstrap JS CDN -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
