--- a/index.html
+++ b/index.html
@@ -21,12 +21,20 @@
     <!-- About Me -->
     <section id="about" class="mb-5">
       <h2 class="mb-4" style="color: #e75480;">About Me</h2>
-      <div class="ms-4">
-        <h3 class="h5 mt-3" style="color: #d1477e;">HIROSE Ryota</h3>
-        <p class="mb-3">
-          看護学専攻の学生です。精神看護に興味があります。<br />
-          情報科学と看護学を組み合わせて，新たな発見や課題解決をしたいと考えています。
-        </p>
+
+      <div class="d-flex align-items-start mb-4 ms-4">
+        <!-- 左側：プロフィール画像 -->
+        <img src="images/profile.png" alt="HIROSE Ryota" class="rounded-circle me-3" width="200" height="200">
+
+        <!-- 右側：名前と文章 -->
+        <div>
+          <h3 class="h5 mt-0" style="color: #d1477e;">HIROSE Ryota</h3>
+          <p class="mb-3">
+            看護学専攻の学生です。精神看護に興味があります。<br />
+            情報科学と看護学を組み合わせて，新たな発見や課題解決をしたいと考えています。
+          </p>
+        </div>
+      </div>
 
         <!-- 所属 -->
         <h3 class="h5 mt-4" style="color: #d1477e;">所属</h3>
