Update link button styles to use custom pink theme and remove old styles

--- a/index.html
+++ b/index.html
@@ -75,10 +75,10 @@
     <section id="links">
       <h2 class="mb-3" style="color: #e75480;">Links</h2>
       <div class="d-flex gap-3">
-        <a href="https://github.com/riohayes" target="_blank" class="btn btn-outline-dark">
+        <a href="https://github.com/riohayes" target="_blank" class="btn-pink">
           GitHub Profile
         </a>
-        <a href="https://mentalhealth.w3.kanazawa-u.ac.jp/" target="_blank" class="btn btn-outline-dark">
+        <a href="https://mentalhealth.w3.kanazawa-u.ac.jp/" target="_blank" class="btn-pink">
           金沢大学 精神看護学研究室
         </a>
       </div>
