Add Works section to index.html and create PHQ-9 tool page

--- a/index.html
+++ b/index.html
@@ -52,6 +52,19 @@
         </ul>
       </div>
     </section>
+    <!-- Works -->
+    <section id="works" class="mb-5">
+      <h2 class="mb-4" style="color: #e75480;">Works</h2>
+      <div class="ms-4">
+        <ul class="list-unstyled d-flex flex-wrap gap-2">
+          <li class="d-flex align-items-center mb-2 gap-5">
+            <a href="phq9/phq9.html" class="btn-pink">Patient Health Questionnaire-9</a>
+            <span>PHQ-9を用いた簡易メンタルヘルス評価ツール（自己評価用）</span>
+          </li>
+          <!-- 将来的に他の作品もここに追加可能 -->
+        </ul>
+      </div>
+    </section>
 
     <!-- Activities -->
     <section id="activities" class="mb-5">
