Update header title and refine About Me description for clarity

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
   <!-- ヘッダー -->
   <header class="text-white text-center py-5 mb-5" style="background-color: #e56a8f;">
-    <h1 class="display-4">Welcome to riohayes.github.io</h1>
+    <h1 class="display-4">riohayes's Portfolio</h1>
     <p class="lead">このサイトは riohayes の GitHub Pages ユーザサイトです。</p>
   </header>
 
@@ -33,7 +33,7 @@
           <h3 class="h5 mt-0" style="color: #d1477e;">HIROSE Ryota</h3>
           <p class="mb-3">
             看護学専攻の学生です。精神看護に興味があります。<br />
-            情報科学と看護学を組み合わせて，新たな発見や課題解決をしたいと考えています。
+            看護学に情報科学を取り入れ，看護課題の解決につなげたいと考えています。
           </p>
         </div>
       </div>
