--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
         <ul class="list-unstyled d-flex flex-wrap gap-2">
           <li class="d-flex align-items-center mb-2 gap-5">
             <a href="phq9/phq9.html" class="btn-pink">Patient Health Questionnaire-9</a>
-            <span>PHQ-9を用いた簡易メンタルヘルス評価ツール（自己評価用）</span>
+            <span>PHQ-9を用いた簡易メンタルヘルス評価ツール（試作）</span>
           </li>
           <!-- 将来的に他の作品もここに追加可能 -->
         </ul>
