--- a/phq9/phq9.html
+++ b/phq9/phq9.html
@@ -12,7 +12,7 @@
 <header class="text-white text-center py-5 mb-5" style="background-color: #e56a8f;">
   <h1 class="display-4">Patient Health Questionnaire-9 (PHQ-9)</h1>
   <p class="lead">
-    このツールは、Patient Health Questionnaire-9 (PHQ-9) を基にした簡易メンタルヘルス評価ツールです。<br>
+    このツールは、Patient Health Questionnaire-9 (PHQ-9) を基にした簡易メンタルヘルス評価ツール（試作）です。<br>
     ユーザーは過去2週間の気分や活動状況に関する9つの質問に回答することで、簡易的な抑うつ症状の評価が行えます。<br><br>
     ※このツールはあくまで参考用の自己評価であり、診断を行うものではありません。<br>
     精神的な不調や気になる症状がある場合は、必ず医療機関や専門家に相談してください。
