Update header description

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <!-- ヘッダー -->
   <header class="text-white text-center py-5 mb-5" style="background-color: #e56a8f;">
     <h1 class="display-4">Ryota Hirose: Portfolio</h1>
-    <p class="lead">このサイトは riohayes の GitHub Pages ユーザサイトです。</p>
+    <p class="lead">自己紹介や学習成果物のまとめ。</p>
   </header>
 
   <main class="container">
