Refine PHQ-9 tool description and update footer with GitHub link

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <!-- ヘッダー -->
   <header class="text-white text-center py-5 mb-5" style="background-color: #e56a8f;">
     <h1 class="display-4">Ryota Hirose: Portfolio</h1>
-    <p class="lead">自己紹介や学習成果物のまとめ。</p>
+    <p class="lead">自己紹介やWeb開発学習のまとめ。このサイトは現在構築中です。今後，内容を充実させていきます。</p>
   </header>
 
   <main class="container">
@@ -101,7 +101,7 @@
 
   <!-- フッター（ヘッダーと同じ濃いピンク） -->
   <footer class="text-white text-center py-3 mt-5" style="background-color: #e56a8f;">
-    <p class="mb-0">&copy; 2025 riohayes</p>
+    <p class="mb-0">&copy; 2025 Ryota Hirose — GitHub: <a href="https://github.com/riohayes" target="_blank" class="text-white text-decoration-underline">@riohayes</a></p>
   </footer>
 
   <!-- Bootstrap JS CDN -->
