Update header description and modify Works section with new project links

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <!-- ヘッダー -->
   <header class="text-white text-center py-5 mb-5" style="background-color: #e56a8f;">
     <h1 class="display-4">Ryota Hirose: Portfolio</h1>
-    <p class="lead">自己紹介やWeb開発学習のまとめ。このサイトは現在構築中です。今後，内容を充実させていきます。</p>
+    <p class="lead">自己紹介やWeb開発学習のまとめ。このサイトは構築中です。</p>
   </header>
 
   <main class="container">
@@ -57,9 +57,15 @@
       <h2 class="mb-4" style="color: #e75480;">Works</h2>
       <div class="ms-4">
         <ul class="list-unstyled d-flex flex-wrap gap-2">
-          <li class="d-flex align-items-center mb-2 gap-5">
-            <a href="phq9/phq9.html" class="btn-pink">Patient Health Questionnaire-9</a>
-            <span>PHQ-9を用いた簡易メンタルヘルス評価ツール（試作）</span>
+          <li class="d-flex align-items-center mb-2 gap-4">
+            <a href="https://studio--studio-6791202172-f7417.us-central1.hosted.app/" target="_blank" rel="noopener noreferrer" class="btn-pink">NursePoll</a>
+            <span>興味のある看護領域についての投票ウェブアプリ</span>
+          </li>
+        </ul>
+        <ul class="list-unstyled d-flex flex-wrap gap-2">
+          <li class="d-flex align-items-center mb-2 gap-4">
+            <a href="phq9/phq9.html" target="_blank" rel="noopener noreferrer" class="btn-pink">Patient Health Questionnaire-9</a>
+            <span>PHQ-9を用いた簡易メンタルヘルス評価ツール</span>
           </li>
           <!-- 将来的に他の作品もここに追加可能 -->
         </ul>
