Update project descriptions in Works section to indicate prototypes

--- a/index.html
+++ b/index.html
@@ -59,13 +59,13 @@
         <ul class="list-unstyled d-flex flex-wrap gap-2">
           <li class="d-flex align-items-center mb-2 gap-4">
             <a href="https://studio--studio-6791202172-f7417.us-central1.hosted.app/" target="_blank" rel="noopener noreferrer" class="btn-pink">NursePoll</a>
-            <span>興味のある看護領域についての投票ウェブアプリ</span>
+            <span>興味のある看護領域についての投票ウェブアプリ（試作）</span>
           </li>
         </ul>
         <ul class="list-unstyled d-flex flex-wrap gap-2">
           <li class="d-flex align-items-center mb-2 gap-4">
             <a href="phq9/phq9.html" target="_blank" rel="noopener noreferrer" class="btn-pink">Patient Health Questionnaire-9</a>
-            <span>PHQ-9を用いた簡易メンタルヘルス評価ツール</span>
+            <span>PHQ-9を用いた簡易メンタルヘルス評価ツール（試作）</span>
           </li>
           <!-- 将来的に他の作品もここに追加可能 -->
         </ul>
